in class exercise corrected some bugs

--- a/new.html
+++ b/new.html
@@ -8,13 +8,13 @@
 
   <form action="index.html">
     <div>
-      <label for="last">First Name</label>
-      <input name="first_name" type="file" id="first">
+      <label for="first">First Name</label>
+      <input name="first_name" type="text" id="first" value ="default">
     </div>
 
     <div>
-      <label for="bob">Last Name</label>
-      <input name="last_name" type="text" id="last">
+      <label for="last">Last Name</label>
+      <input name="last_name" type="text" id="last" placeholder="enter here">
     </div>
 
     <div>
@@ -25,6 +25,7 @@
         <option value="6">Student</option>
       </select>
     </div>
+
 
     <div>
       <label for="picture">Picture URL</label>
